feat(type): add image type (#24)
